# bruhbox

./: .gitignore  README.md  TODO  bruh.c  dirent.h  echo.c  expand.c  meson.build  nl.c  yes.c
include/: meson.build
src/: bruh.c  cat.c  expand.c  false.c  head.c  ls.c  meson.build  tee.c  unexpand.c  wc.c
tests/: TODO.txt  test.txt
