executable('bruh', 'bruh.c')
executable('cat', 'cat.c')
executable('echo', 'echo.c')
executable('expand', 'expand.c')
executable('false', 'false.c')
executable('head', 'head.c')
executable('ls', 'ls.c')
executable('nl', 'nl.c')
executable('true', 'true.c')
executable('unexpand', 'unexpand.c')
executable('wc', 'wc.c')
executable('yes', 'yes.c')
